# 06-MailBrain-api

./: .env.example  README.md  ai_agent.py  client_secret_221967337419-thv5q632u71op3sdn6lav51s3ncmq5r7.apps.googleusercontent.com.json  config.py  database.py  env.example  gmail_service.py  index.py  mailbrain.db  main.py  pyproject.toml  requirements.txt  vercel.json
routes/: analytics.py  auth.py  emails.py  webhooks.py
